Fixed jumping border on hover at form

--- a/src/app/startseite/form/form.component.scss
+++ b/src/app/startseite/form/form.component.scss
@@ -33,8 +33,8 @@ form {
   }
 
   textarea {
-    border: none;
-    border-bottom: 2px solid white;
+    border: 2px solid white;
+    //border-bottom: 2px solid white;
     background-color: black;
     padding: 15px 25px;
     @include responsiveForm();
@@ -107,7 +107,7 @@ input#dsgvo {
 
 .input-container input, .input-container textarea {
   background-color: black;
-  border: none;
+  border: 2px solid transparent;
   border-bottom: 2px solid white;
   color: white;
   padding: 15px 25px;
